12/12/09 Jason Frisvold
         - Make simscan aware of clamav cld files (Thanks Bob Maple)
         - Fix ripmime working directory (Thanks Gladiston Justini)

03/21/08 Jason Frisvold
         - Fix --enable-dpsam-args (Thanks Jean-Daniel Bonnetot)
         - Prevent double virus scanning (Thanks Gerard Earley)
         - Fix retrieval of SpamHits and ReqHits (Thanks anonymous)
         - Add SpamAssassin's ReqHits to log line (Thanks anonymous)
         - Add SPAM PASS log line (Thanks anonymous)

11/12/07 Jason Frisvold
         - Improvement patch (Tom Collins)
         - - Clamdscan scans the message file instead of the message file and
         -   attachment
         - - Don't pass messages over 250k to spamassassin
         - - Spam scanning before virus scanning
         - - Lowercase FROM and TO addresses
         - - write spam_fd before calling is_spam()
         - - fix str_rstr() call to require complete match

10/30/07 Jason Frisvold
         - simscan directory umask fix (John Simpson)
         - band-aid simscanmk NFS timing issue on solaris - Tom Collins
         - strsep bug in Solaris - Tom Collins
         - set exit code on errors - Jeremy Kister
         - fix compile warning issues with long versus int - Jeremy Kister
         - add pid to debug messages - Jeremy Kister
         - RFC2822 Received field compliance - Tullio Andreatta

10/29/07 Jason Frisvold
         - Support daily and main .inc and .cvd files (John Simpson)
         - Fixed a few compiler warnings (Jason Frisvold)
         - simcontrol lookups should be lowercase (Jason Frisvold)
         - lowercase all strings in the simcontrol.cdb file (Jason Frisvold)

10/29/07 Ken Jones
         - release version 1.4.0 with p0f code moved to qmail-smtpd

03/11/07 Ken Jones
         - for dspam only authorized users can send email to spam@ and nospam@,
           includes support for custom smtp error message

05/18/06 George Breahna
         - first version of DSPAM support
